--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,6 +9,7 @@
     body { font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial; margin: 0; padding: 16px; }
     .row { display: flex; gap: 12px; margin-bottom: 12px; }
     .card { border: 1px solid #ddd; border-radius: 12px; padding: 12px; margin-bottom: 10px; }
+    .empty { padding: 24px; text-align: center; color: #666; border: 1px dashed #ccc; border-radius: 12px; }
     .btn { padding: 8px 12px; border-radius: 8px; border: 1px solid #ccc; background: #f8f8f8; cursor: pointer; }
     .btn:active { transform: translateY(1px); }
     #answer { white-space: pre-wrap; }
@@ -30,7 +31,7 @@
   <h3>Answer</h3>
   <div id="answer" class="card"></div>
 
-  <h3>Recent emails</h3>
+  <h3>Needs your reply</h3>
   <div id="emails"></div>
 
   <script type="module" src="/main.js"></script>
