Add inbox reset workflow and strengthen marketing detection

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -44,6 +44,12 @@
       border-color: #4f46e5;
       box-shadow: 0 1px 3px rgba(79, 70, 229, 0.3);
     }
+    .btn.danger {
+      background: #ef4444;
+      color: #fff;
+      border-color: #dc2626;
+      box-shadow: 0 1px 3px rgba(220, 38, 38, 0.28);
+    }
     .btn:active {
       transform: translateY(1px);
     }
@@ -224,6 +230,7 @@
     <button id="connect" class="btn">Connect Gmail</button>
     <button id="enableNotifs" class="btn">Enable Notifications</button>
     <button id="refresh" class="btn">Refresh Emails</button>
+    <button id="reset" class="btn danger">Reset Inbox</button>
   </div>
 
   <div class="layout">
