--- a/frontend/index.html
+++ b/frontend/index.html
@@ -173,6 +173,17 @@
       margin-bottom: 12px;
       box-shadow: 0 1px 2px rgba(15, 23, 42, 0.06);
     }
+    .email-card .email-status {
+      font-size: 11px;
+      font-weight: 600;
+      letter-spacing: 0.05em;
+      text-transform: uppercase;
+      margin-top: 6px;
+      color: #64748b;
+    }
+    .email-card .email-status.unread {
+      color: #2563eb;
+    }
     .email-card .email-date {
       font-size: 12px;
       color: #64748b;
